<resources>
    <string name="app_name">myapp</string>
    <string name="nama_1">TUGAS</string>
    <string name="nama_2">ABOUT ME</string>
    <string name="nama_3">RIKO SENDI BAGASKARA</string>
    <string name="nama_4">LIKE</string>
    <string name="nama_5"> 10 NOVEMBER 1999</string>
    <string name="nama_6"> “Tindakan menyalahkan hanya akan membuang waktu. Sebesar apapun kesalahan yang Anda timpakan ke orang lain, dan sebesar apapun Anda menyalahkannya, hal tersebut tidak akan mengubah Anda” - Wayne Dyer

“All blame is a waste of time. No matter how much fault you find with another, and regardless of how much you blame him,  it will not change you” - Wayne Dyer

Tip: Sikap menyalahkan orang lain atau sesuatu yang berada di luar kontrol kita adalah sikap yang dapat menghentikan laju kesuksesan kita. Fokus menerima masalah yang Ada, berhenti menyalahkan orang lain karena itu tidak akan mengubah diri Anda menjadi pribadi yang lebih baik. Menurut Wayne Dyer, usaha mencari pembenaran dalam kehidupan ini adalah sia-sia belaka. Coba berkomitmen untuk mengambil tanggung jawab penuh pada hidup Anda dan hadapi setiap masalah yang ada dengan percaya diri.</string>
    <string name="nama_7"> LIKE </string>
    <string name="nama_8">  DISLIKE </string>
</resources>
